# language

./: CMakeLists.txt  Executive.cpp  Executive.h  ExpCheck.cpp  ExpCheck.h  Lexeme.cpp  Lexeme.h  Overloader.cpp  Overloader.h  PolizGenerator.cpp  PolizGenerator.h  Syntax.cpp  Syntax.h  TID.cpp  TID.h  main.cpp  start_code.txt
